# easy_investment_Agent_crewai

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  PACKAGING_EXAMPLE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UI_使用指南.md  build_windows_exe.bat  build_windows_exe.sh  实现说明.md  打包指南.md  打包方案总结.md
stock_analysis/: CLAUDE.md  README.md
stock_analysis/.claude/: settings.local.json
stock_analysis/src/stock_analysis/: crew.py  env.example  pyproject.toml
stock_analysis/src/stock_analysis/tools/: calculator_tool.py  sec_tools.py
stock_analysis_a_stock/: .gitignore  build_python_bundle.bat  build_python_bundle.sh
stock_analysis_a_stock/src/a_stock_analysis/: README.md  check_crewai.py  cli_entry.py  crew.py  env.example  main.py  pyproject.toml  test_financial_fix.py  test_quote_fix.py
stock_analysis_a_stock/src/a_stock_analysis/config/: agents.yaml  tasks.yaml
stock_analysis_a_stock/src/a_stock_analysis/tools/: a_stock_data_tool.py
ui/: .gitignore  FEATURES.md  README.md  build.bat  build.sh  go.mod  main.go  run.bat  run.sh
