[project]
name = "stock_analysis"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "crewai[tools]>=0.152.0,<0.160.0",  # 限制版本范围以确保稳定性
    "python-dotenv>=1.0.1",
    "html2text>=2024.2.26",
    "sec-api>=1.0.20",
    "embedchain>=0.1.80",  # 用于数据类型支持
    "requests>=2.31.0",  # 确保HTTP请求功能可用
]

[project.scripts]
stock_analysis = "stock_analysis.main:run"
train = "stock_analysis.main:train"
